<resources>
    <string name="app_name">RajioTaiso</string>
    <string name="participant">Participant</string>
    <string name="votre_nom_ici">Votre nom ici</string>
    <string name="tacos">MaxiTacos</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="NomDuParticipant">Nom du participant</string>
    <string name="NomDecole">Nom de école</string>
    <string name="NomDecole2">Votre école ici</string>
    <string name="NomLanguage">Votre Langage</string>
    <string name="NomLanguage2">Votre Langage ici</string>
    <string name="NomDelecole">Nom de l\'école</string>
    <string name="NomDuLanguage">Nom du langage</string>
</resources>
